      support is not available. This was against iptables-1.4.7, and has been
      fixed in this release of fwknop (tracked as issue #162).
    - [server] Added --key-gen to fwknopd. This feature was suggested by
      Jonathan Bennett, and will help with ease of use efforts. The first
      platform to take advantage of this will likely be OpenWRT thanks to
      Jonathan.
    - [extras] Added a script from Jonathan Bennett at
      extras/console-qr/console-qr.sh to generate QR codes from fwknopd
      access.conf keys.
    - [build] Added --with-firewalld to the autoconf configure script. This is
      a synonym for --with-firewall-cmd to avoid confusion. Some package
      maintainers use --with-firewalld to build fwknop.

fwknop-2.6.6 (04/23/2015):
    - [server] Add the ability for fwknopd to function as an generic SPA
      gateway. This allows scenarios such as the fwknopd system providing DHCP
      addresses to client systems, but those systems would be blocking by
      default from accessing the broader Internet until a valid SPA packet is
      sent to the gateway. Two new access.conf variables support this feature:
      DISABLE_DNAT (do not build any DNAT rules for forwarded connections) and
      FORWARD_ALL (allow all traffic to be forwarded instead of specfic
      services requested within an SPA packet). So far, this feature is only
      supported on systems running iptables or firewalld. The idea was
      contributed by "spartan1833" to the fwknop mailing list, and this became
      issue 131 on github.
    - [server] Bug fix when compiled with --enable-udp-server to not include
      pcap.h, which is likely not installed whenever libpcap is also not
      installed. This bug was reported by Alexander Kozhevnikov.
    - [android] (Dan Brooks) Contributed a patch for the Android client app to
      add the definition of custom server udp port. This is similiar to the
      --server-port argument offered by the main fwknop client.