@@ -48,6 +48,7 @@ static char *config_map[NUMBER_OF_CONFIG_ENTRIES] = {
     "PCAP_DISPATCH_COUNT",
     "PCAP_LOOP_SLEEP",
     "ENABLE_PCAP_ANY_DIRECTION",
+    "EXIT_AT_INTF_DOWN",
     "MAX_SNIFF_BYTES",
     "ENABLE_SPA_PACKET_AGING",
     "MAX_SPA_PACKET_AGE",
